src/avatar/avatar.module.css
:root {
    --reactist-avatar-initials-color: var(--reactist-actionable-primary-idle-tint);
    --reactist-avatar-border-tint: #0000001a;
    --reactist-avatar-empty-fill: var(--reactist-framework-fill-crest);

    --reactist-avatar-meta-0-fill: #b8255f;
    --reactist-avatar-meta-0-on-idle-tint: var(--reactist-avatar-initials-color);
    --reactist-avatar-meta-1-fill: #dc4c3e;
    --reactist-avatar-meta-1-on-idle-tint: var(--reactist-avatar-initials-color);
    --reactist-avatar-meta-2-fill: #f48318;
    --reactist-avatar-meta-2-on-idle-tint: var(--reactist-avatar-initials-color);
    --reactist-avatar-meta-3-fill: #fecf05;
    --reactist-avatar-meta-3-on-idle-tint: #202020;
    --reactist-avatar-meta-4-fill: #aeb83a;
    --reactist-avatar-meta-4-on-idle-tint: var(--reactist-avatar-initials-color);
    --reactist-avatar-meta-5-fill: #7ecc48;
    --reactist-avatar-meta-5-on-idle-tint: var(--reactist-avatar-initials-color);
    --reactist-avatar-meta-6-fill: #369307;
    --reactist-avatar-meta-6-on-idle-tint: var(--reactist-avatar-initials-color);
    --reactist-avatar-meta-7-fill: #52ccb8;
    --reactist-avatar-meta-7-on-idle-tint: var(--reactist-avatar-initials-color);
    --reactist-avatar-meta-8-fill: #148fad;
    --reactist-avatar-meta-8-on-idle-tint: var(--reactist-avatar-initials-color);
    --reactist-avatar-meta-9-fill: #3ab9e2;
    --reactist-avatar-meta-9-on-idle-tint: #202020;
    --reactist-avatar-meta-10-fill: #96c3eb;
    --reactist-avatar-meta-10-on-idle-tint: var(--reactist-avatar-initials-color);
    --reactist-avatar-meta-11-fill: #2a67e2;
    --reactist-avatar-meta-11-on-idle-tint: var(--reactist-avatar-initials-color);
    --reactist-avatar-meta-12-fill: #692ec2;
    --reactist-avatar-meta-12-on-idle-tint: var(--reactist-avatar-initials-color);
    --reactist-avatar-meta-13-fill: #ac30cc;
    --reactist-avatar-meta-13-on-idle-tint: var(--reactist-avatar-initials-color);
    --reactist-avatar-meta-14-fill: #eb96c8;
    --reactist-avatar-meta-14-on-idle-tint: var(--reactist-avatar-initials-color);
    --reactist-avatar-meta-15-fill: #e05095;
    --reactist-avatar-meta-15-on-idle-tint: var(--reactist-avatar-initials-color);
    --reactist-avatar-meta-16-fill: #c9766f;
    --reactist-avatar-meta-16-on-idle-tint: var(--reactist-avatar-initials-color);
    --reactist-avatar-meta-17-fill: #808080;
    --reactist-avatar-meta-17-on-idle-tint: var(--reactist-avatar-initials-color);
    --reactist-avatar-meta-18-fill: #999999;
    --reactist-avatar-meta-18-on-idle-tint: var(--reactist-avatar-initials-color);
    --reactist-avatar-meta-19-fill: #ccae96;
    --reactist-avatar-meta-19-on-idle-tint: var(--reactist-avatar-initials-color);
}

.avatar {
    --reactist-avatar-size: 36px;
    --reactist-avatar-rounded-radius: 5px;
    --reactist-avatar-meta-fill: var(--reactist-avatar-meta-0-fill);

    background-color: var(--reactist-avatar-empty-fill);
    width: var(--reactist-avatar-size);
    height: var(--reactist-avatar-size);

    outline: 2px solid var(--reactist-avatar-border-tint);
    outline-offset: -2px;
}

.avatar:has(.initials) {
    background-color: var(--reactist-avatar-meta-fill);
}

.meta-color-0 {
    --reactist-avatar-meta-fill: var(--reactist-avatar-meta-0-fill);
    --reactist-avatar-initials-color: var(--reactist-avatar-meta-0-on-idle-tint);
}

.meta-color-1 {
    --reactist-avatar-meta-fill: var(--reactist-avatar-meta-1-fill);
    --reactist-avatar-initials-color: var(--reactist-avatar-meta-1-on-idle-tint);
}

.meta-color-2 {
    --reactist-avatar-meta-fill: var(--reactist-avatar-meta-2-fill);
    --reactist-avatar-initials-color: var(--reactist-avatar-meta-2-on-idle-tint);
}

.meta-color-3 {
    --reactist-avatar-meta-fill: var(--reactist-avatar-meta-3-fill);
    --reactist-avatar-initials-color: var(--reactist-avatar-meta-3-on-idle-tint);
}

.meta-color-4 {
    --reactist-avatar-meta-fill: var(--reactist-avatar-meta-4-fill);
    --reactist-avatar-initials-color: var(--reactist-avatar-meta-4-on-idle-tint);
}

.meta-color-5 {
    --reactist-avatar-meta-fill: var(--reactist-avatar-meta-5-fill);
    --reactist-avatar-initials-color: var(--reactist-avatar-meta-5-on-idle-tint);
}

.meta-color-6 {
    --reactist-avatar-meta-fill: var(--reactist-avatar-meta-6-fill);
    --reactist-avatar-initials-color: var(--reactist-avatar-meta-6-on-idle-tint);
}

.meta-color-7 {
    --reactist-avatar-meta-fill: var(--reactist-avatar-meta-7-fill);
    --reactist-avatar-initials-color: var(--reactist-avatar-meta-7-on-idle-tint);
}

.meta-color-8 {
    --reactist-avatar-meta-fill: var(--reactist-avatar-meta-8-fill);
    --reactist-avatar-initials-color: var(--reactist-avatar-meta-8-on-idle-tint);
}

.meta-color-9 {
    --reactist-avatar-meta-fill: var(--reactist-avatar-meta-9-fill);
    --reactist-avatar-initials-color: var(--reactist-avatar-meta-9-on-idle-tint);
}

.meta-color-10 {
    --reactist-avatar-meta-fill: var(--reactist-avatar-meta-10-fill);
    --reactist-avatar-initials-color: var(--reactist-avatar-meta-10-on-idle-tint);
}

.meta-color-11 {
    --reactist-avatar-meta-fill: var(--reactist-avatar-meta-11-fill);
    --reactist-avatar-initials-color: var(--reactist-avatar-meta-11-on-idle-tint);
}

.meta-color-12 {
    --reactist-avatar-meta-fill: var(--reactist-avatar-meta-12-fill);
    --reactist-avatar-initials-color: var(--reactist-avatar-meta-12-on-idle-tint);
}

.meta-color-13 {
    --reactist-avatar-meta-fill: var(--reactist-avatar-meta-13-fill);
    --reactist-avatar-initials-color: var(--reactist-avatar-meta-13-on-idle-tint);
}

.meta-color-14 {
    --reactist-avatar-meta-fill: var(--reactist-avatar-meta-14-fill);
    --reactist-avatar-initials-color: var(--reactist-avatar-meta-14-on-idle-tint);
}

.meta-color-15 {
    --reactist-avatar-meta-fill: var(--reactist-avatar-meta-15-fill);
    --reactist-avatar-initials-color: var(--reactist-avatar-meta-15-on-idle-tint);
}

.meta-color-16 {
    --reactist-avatar-meta-fill: var(--reactist-avatar-meta-16-fill);
    --reactist-avatar-initials-color: var(--reactist-avatar-meta-16-on-idle-tint);
}

.meta-color-17 {
    --reactist-avatar-meta-fill: var(--reactist-avatar-meta-17-fill);
    --reactist-avatar-initials-color: var(--reactist-avatar-meta-17-on-idle-tint);
}

.meta-color-18 {
    --reactist-avatar-meta-fill: var(--reactist-avatar-meta-18-fill);
    --reactist-avatar-initials-color: var(--reactist-avatar-meta-18-on-idle-tint);
}

.meta-color-19 {
    --reactist-avatar-meta-fill: var(--reactist-avatar-meta-19-fill);
    --reactist-avatar-initials-color: var(--reactist-avatar-meta-19-on-idle-tint);
}

.empty {
    background-color: var(--reactist-avatar-empty-fill);
}

.shape-circle {
    border-radius: 50%;
}

.shape-rounded {
    border-radius: var(--reactist-avatar-rounded-radius);
}

.image {
    display: block;
    width: 100%;
    height: 100%;
    border-radius: inherit;
    object-fit: cover;
}

.initials {
    color: var(--reactist-avatar-initials-color);
    font-size: calc(var(--reactist-avatar-size) / 2);
    font-weight: var(--reactist-font-weight-medium);
    line-height: 1;
    user-select: none;
}

.avatarGroup {
    --reactist-avatar-group-size: 36px;
    --reactist-avatar-group-overlap: 4px;
    --reactist-avatar-group-mask: 2.5px;
    --reactist-avatar-group-rounded-radius: 5px;
    --reactist-avatar-group-count-overlay: rgba(0, 0, 0, 0.6);
    --reactist-avatar-group-previous-center-x: calc(
        (var(--reactist-avatar-group-size) / 2) - var(--reactist-avatar-group-size) +
            var(--reactist-avatar-group-overlap)
    );

    position: relative;
}

.avatarGroup > * {
    flex-shrink: 0;
}

.avatarGroup > * + * {
    margin-left: calc(-1 * var(--reactist-avatar-group-overlap));
}

.avatarGroupShape-circle > * + * {
    -webkit-mask-image: radial-gradient(
        circle calc((var(--reactist-avatar-group-size) / 2) + var(--reactist-avatar-group-mask)) at
            var(--reactist-avatar-group-previous-center-x) 50%,
        transparent 99%,
        #000 100%
    );
    mask-image: radial-gradient(
        circle calc((var(--reactist-avatar-group-size) / 2) + var(--reactist-avatar-group-mask)) at
            var(--reactist-avatar-group-previous-center-x) 50%,
        transparent 99%,
        #000 100%
    );
}

.avatarGroupShape-rounded > * + * {
    -webkit-mask-image: linear-gradient(
        to right,
        transparent 0 calc(var(--reactist-avatar-group-overlap) + var(--reactist-avatar-group-mask)),
        #000 calc(var(--reactist-avatar-group-overlap) + var(--reactist-avatar-group-mask))
    );
    mask-image: linear-gradient(
        to right,
        transparent 0 calc(var(--reactist-avatar-group-overlap) + var(--reactist-avatar-group-mask)),
        #000 calc(var(--reactist-avatar-group-overlap) + var(--reactist-avatar-group-mask))
    );
}

.avatarGroup[data-count]::after {
    content: attr(data-count);
    position: absolute;
    top: 0;
    right: 0;
    display: flex;
    align-items: center;
    justify-content: center;
    width: var(--reactist-avatar-group-size);
    height: var(--reactist-avatar-group-size);
    border-radius: 50%;
    background: var(--reactist-avatar-group-count-overlay);
    color: var(--reactist-avatar-initials-color);
    font-size: calc(var(--reactist-avatar-group-size) / 2);
    font-weight: var(--reactist-font-weight-medium);
    line-height: 1;
    pointer-events: none;
    user-select: none;
    -webkit-mask-image: radial-gradient(
        circle calc((var(--reactist-avatar-group-size) / 2) + var(--reactist-avatar-group-mask)) at
            var(--reactist-avatar-group-previous-center-x) 50%,
        transparent 99%,
        #000 100%
    );
    mask-image: radial-gradient(
        circle calc((var(--reactist-avatar-group-size) / 2) + var(--reactist-avatar-group-mask)) at
            var(--reactist-avatar-group-previous-center-x) 50%,
        transparent 99%,
        #000 100%
    );
}

.avatarGroupShape-rounded[data-count]::after {
    border-radius: var(--reactist-avatar-group-rounded-radius);
    -webkit-mask-image: linear-gradient(
        to right,
        transparent 0 calc(var(--reactist-avatar-group-overlap) + var(--reactist-avatar-group-mask)),
        #000 calc(var(--reactist-avatar-group-overlap) + var(--reactist-avatar-group-mask))
    );
    mask-image: linear-gradient(
        to right,
        transparent 0 calc(var(--reactist-avatar-group-overlap) + var(--reactist-avatar-group-mask)),
        #000 calc(var(--reactist-avatar-group-overlap) + var(--reactist-avatar-group-mask))
    );
}

.avatarGroup[data-count]:has(> :first-child:last-child)::after {
    -webkit-mask-image: none;
    mask-image: none;
}

